# svm-order-params

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  checkpointing_stop_callback.cpp  checkpointing_stop_callback.hpp  coeffs.cpp  config_policy.hpp  config_sim_base.hpp  contraction.hpp  convenience_params.hpp  dispatcher.hpp  embarrassing_adapter.hpp  filesystem.hpp  ising-coeffs.cpp  learn.cpp  main.cpp  output_contractions.cpp  override_parameters.hpp  phase_space_point.hpp  phase_space_policy.cpp  phase_space_policy.hpp  procrastination_adapter.hpp  pt.hpp  pt_adapter.hpp  results.cpp  results.hpp  sample.cpp  segregate_phases.cpp  structure.md  svm-order-params.sublime-project  test.cpp  test_adapter.hpp  training_adapter.hpp
frustmag/: CMakeLists.txt  README.md  concepts.hpp  config_frustmag_sim.hpp  frustmag.hpp  frustmag_config_policy.hpp  main.cpp  observables.hpp  std_concepts.hpp
frustmag/hamiltonian/: heisenberg.hpp  ising.hpp
frustmag/include/frustmag/: config_policy.hpp
frustmag/include/frustmag/hamiltonian/: heisenberg.hpp
frustmag/include/frustmag/lattice/: bravais.hpp  dice.hpp  kagome.hpp  serialization.hpp
frustmag/include/frustmag/site/: spin_Z2.hpp
frustmag/include/frustmag/update/: heatbath.hpp  mux.hpp  overrelaxation.hpp
frustmag/include/tksvm/frustmag/: concepts.hpp  config_frustmag_sim.hpp  config_policy.hpp  frustmag_sim.hpp  observables.hpp  phase_diagram.hpp  std_concepts.hpp
frustmag/include/tksvm/frustmag/cluster_policy/: lattice.hpp  single.hpp
frustmag/include/tksvm/frustmag/element_policy/: lattice.hpp  single.hpp
frustmag/include/tksvm/frustmag/hamiltonian/: heisenberg.hpp  ising.hpp
frustmag/include/tksvm/frustmag/lattice/: bravais.hpp  chain.hpp  dice.hpp  honeycomb.hpp  kagome.hpp  ortho.hpp  serializer.hpp  triangular.hpp
frustmag/include/tksvm/frustmag/site/: spin_O3.hpp  spin_Z2.hpp
frustmag/include/tksvm/frustmag/update/: global_trafo.hpp  heatbath.hpp  mux.hpp  overrelaxation.hpp  parallel_tempering.hpp  single_flip.hpp
frustmag/lattice/: bravais.hpp  chain.hpp  dice.hpp  honeycomb.hpp  kagome.hpp  ortho.hpp  triangular.hpp
frustmag/params/: .gitignore  kagome.ini  kagome_hot.ini
frustmag/site/: spin_O3.hpp  spin_Z2.hpp
frustmag/src/: phase_diagram.cpp
frustmag/test/: CMakeLists.txt  lattice.cpp
frustmag/update/: global_trafo.hpp  mux.hpp  overrelaxation.hpp  parallel_tempering.hpp  single_flip.hpp
gauge/: CMakeLists.txt  README.md  config_policy.hpp  contraction.cpp  contraction.hpp  gauge-coeffs.cpp  gauge.cpp  gauge.hpp  gauge.ini  gauge_config_policy.hpp  indices.hpp  matrix_output.hpp  nematicities.cpp  output_contractions.cpp  point_groups.cpp  point_groups.hpp  results.cpp  results.hpp
gauge/include/tksvm/gauge/: config_policy.hpp  gauge_sim.hpp  point_groups.hpp
gauge/include/tksvm/gauge/cluster_policy/: full.hpp  single.hpp  square.hpp
gauge/include/tksvm/gauge/element_policy/: mono.hpp  n_partite.hpp  triad.hpp
gauge/include/tksvm/gauge/phase_space/point/: J1J3.hpp
gauge/params/: Cinfv-hyperplane.ini  D2h-cycle.ini  D2h-grid.ini  D2h-phase-diagram.ini  D3h-phase-diagram.rank2.ini  D3h-phase-diagram.rank3.ini  Dinfh-hyperplane.ini  Oh-hyperplane.ini  Td-cycle.ini  Td-hyperplane.ini  Th-hyperplane.ini
gauge/src/: gauge_sim.cpp  nematicities.cpp  phase_diagram.cpp  point_groups.cpp
include/: argh.h
include/tksvm/: block_reduction.hpp  config_serialization.hpp  config_sim_base.hpp
include/tksvm/cluster_policy/: stride.hpp
include/tksvm/config/: block_policy.hpp  clustered_policy.hpp  monomial_policy.hpp  policy.hpp  serializer.hpp
include/tksvm/element_policy/: components.hpp
include/tksvm/phase_space/: classifier.hpp  label.hpp  sweep.hpp
include/tksvm/phase_space/classifier/: critical_temperature.hpp  fixed_from_sweep.hpp  hyperplane.hpp  orthants.hpp  phase_diagram.hpp  policy.hpp
include/tksvm/phase_space/point/: common.hpp  temperature.hpp
include/tksvm/phase_space/sweep/: cycle.hpp  grid.hpp  line_scan.hpp  log_scan.hpp  nonuniform_grid.hpp  policy.hpp  sweep_grid.hpp  uniform.hpp  uniform_line.hpp
include/tksvm/sim_adapters/: embarrassing_adapter.hpp  procrastination_adapter.hpp  pt_adapter.hpp  test_adapter.hpp  training_adapter.hpp
include/tksvm/symmetry_policy/: none.hpp  symmetrized.hpp
include/tksvm/utilities/: contraction.hpp  convenience_params.hpp  filesystem.hpp  indices.hpp  matrix_output.hpp  polygon.hpp  void_t.hpp
include/tksvm/utilities/mpi/: dispatcher.hpp  mpi.hpp
include/tksvm/utilities/results/: results.hpp
ising/: CMakeLists.txt  README.md  gf_tail.cpp  ising-coeffs.cpp  ising.cpp  ising.hpp  ising_config_policy.hpp  storage_type.hpp
ising/include/tksvm/ising/: config_policy.hpp  exp_beta.hpp  ising_sim.hpp  storage_type.hpp
ising/include/tksvm/ising/element_policy/: Z2_site.hpp
ising/params/: ising.ini
ising/src/: ising-coeffs.cpp  ising_sim.cpp
params/: .gitignore  AFM.ini  Dinfh.ini  Oh.ini  Td.ini  Th.ini  build_and_run_all.sh
params/D3h/rank_3/: D3h.ini
params/grid/: graph.gnuplot
params/hyperplane/Dinfh/: Dinfh.ini
params/hyperplane/Oh/: Oh.ini
params/hyperplane/Td/: Td.gnuplot
src/: coeffs.cpp  contraction.cpp  learn.cpp  output_contractions.cpp  sample.cpp  segregate_phases.cpp  test.cpp
src/utilities/: checkpointing_stop_callback.cpp  contraction.cpp  results.cpp
svm/kernel/: polynomial.hpp
tools/: components.py
utilities/: convenience_params.hpp  filesystem.hpp  matrix_output.hpp  mpi.hpp  polygon.hpp
